--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -705,6 +705,7 @@ nav {
          flex-direction: column;
          padding: 20px 0;
          height: fit-content;
+         gap: 10px;
       }
 
          .panel .body .properties .tool-container .tools .search .side {
