--- a/WCSTrainer/Pages/Lessons/Index.cshtml
+++ b/WCSTrainer/Pages/Lessons/Index.cshtml
@@ -41,7 +41,7 @@
                      </div>
                      <ul class="skill-list">
                         @foreach (var lesson in category.Lessons) {
-                           <li id="@lesson.Name @lesson.Id" class="skill">
+                           <li id="@lesson.Name @lesson.Id" class="skill searchable2">
                               <a asp-page="./Details" asp-route-id="@lesson.Id">- @lesson.Name</a>
                            </li>
                         }
@@ -55,7 +55,8 @@
             <div class="tools">
                <p class="title">Options:</p>
                <div class="search">
-                  <input class="search-box" id="searchInput" placeholder="Search Categories" type="search" oninput="update(this)" />
+                  <input class="search-box" id="searchInput" placeholder="Search Categories" type="search" oninput="update(this, 'searchable')" />
+                  <input class="search-box" id="searchInput" placeholder="Search Lessons" type="search" oninput="update(this, 'searchable2')" />
                </div>
                <div class="btns">
                   <a asp-page="Create" class="btn nbg-btn btnMenu">Create Lesson</a>
