--- a/WCSTrainer/Pages/Locations/Index.cshtml
+++ b/WCSTrainer/Pages/Locations/Index.cshtml
@@ -31,7 +31,7 @@
             </div>
             <ul class="category-container">
                @foreach (var category in Model.CategoryList) {
-                  <li id="@category.Name @category.Id" class="category">
+                  <li id="@category.Name @category.Id" class="category searchable">
                      <div class="category-title">
                         <p>@category.Name</p>
                         @if (isOwner) {
@@ -43,7 +43,7 @@
                      </div>
                      <ul class="skill-list">
                         @foreach (var lesson in category.Locations) {
-                           <li id="@lesson.Name @lesson.Id" class="skill">
+                           <li id="@lesson.Name @lesson.Id" class="skill searchable2">
                               <a asp-page="./Details" asp-route-id="@lesson.Id">#@lesson.Id - @lesson.Name</a>
                            </li>
                         }
@@ -57,7 +57,8 @@
             <div class="tools">
                <p class="title">Options:</p>
                <div class="search">
-                  <input class="search-box" id="searchInput" placeholder="Search Categories" type="search" oninput="update(this)" />
+                  <input class="search-box" id="searchInput" placeholder="Search Categories" type="search" oninput="update(this, 'searchable')" />
+                  <input class="search-box" id="searchInput" placeholder="Search Locations" type="search" oninput="update(this, 'searchable2')" />
                </div>
                <div class="btns">
                   <a asp-page="Create" class="btn nbg-btn btnMenu">Create Location</a>
