--- a/WCSTrainer/Pages/Employees/Edit.cshtml
+++ b/WCSTrainer/Pages/Employees/Edit.cshtml
@@ -50,6 +50,7 @@
                      <div class="form">
                         <div class="multi-select-wrapper">
                            <p class="label">Departments</p>
+                           <div id="multi-pill-container" class=""></div>
                            <select asp-for="SelectedDepartments" multiple class="multi-select-comp" size="@Model.Departments.Count()">
                               @foreach (var dept in Model.Departments) {
                                  <option value="@dept.Id">@dept.Name</option>
