--- a/WCSTrainer/wwwroot/css/universal.css
+++ b/WCSTrainer/wwwroot/css/universal.css
@@ -115,16 +115,16 @@ img {
 }
 
 .pill-container {
-	display: flex;
-	flex-wrap: wrap;
-	background: var(--black);
-	padding: 3px;
-	padding-right: 10px;
-	border: 1px solid var(--gray5);
-	min-height: 25px;
-	min-width: 100px;
-	cursor: pointer;
-	border-radius: 5px;
+   display: flex;
+   flex-wrap: wrap;
+   background: var(--black);
+   padding: 3px;
+   border: 1px solid var(--gray5);
+   min-height: 25px;
+   min-width: 100px;
+   cursor: pointer;
+   border-radius: 5px;
+   gap: 1px;
 }
 
 	.pill-container:focus-within {
