--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -32,6 +32,7 @@ nav {
             align-items: center;
             display: flex;
             height: 60px;
+            gap: 20px;
          }
 
             nav .nav-container .nav-buttons ul .main-title {
@@ -55,7 +56,6 @@ nav {
                   text-align: center;
                   user-select: none;
                   font-size: 18px;
-                  margin-right: 20px;
                   display: flex;
                   height: 100%;
                   width: 100%;
