--- a/WCSTrainer/Pages/Shared/_Sidebar.cshtml
+++ b/WCSTrainer/Pages/Shared/_Sidebar.cshtml
@@ -17,7 +17,7 @@
 
 <div class="side-bar">
    <div class="link-list">
-      <button id="condenser" onclick="toggleExpand()" class="btn btnWhite bg-btn condenser">⯇⯈</button>
+      <button id="condenser" onclick="toggleExpand()" class="condenser">⯇⯈</button>
       @foreach (var link in links) {
          var roleRequired = int.Parse(link.Item3);
          if ((roleRequired <= 3 && User.IsInRole("admin")) ||
@@ -26,7 +26,7 @@
          (roleRequired == 1 && User.IsInRole("guest"))) {
             var source = "/images/" + link.Item1 + ".svg";
             <a href="/@link.Item1"
-               class="@(Context.Request.Path.ToString().Contains(link.Item1) ? "selected" : "") btn btnMenu">
+               class="@(Context.Request.Path.ToString().Contains(link.Item1) ? "selected" : "") btn btnMenu condensable">
                <img class="icon @(Context.Request.Path.ToString().Contains(link.Item1) ? "selected-img" : "")" src="@source" />
                <p class="text">@link.Item2</p>
             </a>
