--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -45,7 +45,7 @@
                         <option value="12">December</option>
                      </select>
                   </div>
-                  <div class="multi-select-wrapper">
+@*                   <div class="multi-select-wrapper">
                      <p class="label">Years</p>
                      @{
                         var activeYears = new List<int>();
@@ -64,7 +64,7 @@
                            <option value="2025">2025</option>
                         </select>
                      }
-                  </div>
+                  </div> *@
                </div>
             </div>
             <div class="pagination-container">
