Added year selector to training order sorting.

--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -45,26 +45,20 @@
                         <option value="12">December</option>
                      </select>
                   </div>
-@*                   <div class="multi-select-wrapper">
+                  <div class="multi-select-wrapper">
                      <p class="label">Years</p>
                      @{
                         var activeYears = new List<int>();
                         for (int year = Model.EarliestYear; year <= DateTime.Now.Year; year++) {
                            activeYears.Add(year);
                         }
-                        // <select multiple class="multi-select-comp" size="@activeYears.Count()">
-                        //    @foreach (int year in activeYears) {
-                        //       <option value="@year">@year</option>
-                        //    }
-                        // </select>
-
                         <select multiple class="multi-select-comp" size="3">
                            <option value="2023">2023</option>
                            <option value="2024">2024</option>
                            <option value="2025">2025</option>
                         </select>
                      }
-                  </div> *@
+                  </div>
                </div>
             </div>
             <div class="pagination-container">
