Year Selector Completion

--- a/WCSTrainer/Pages/Lessons/Create.cshtml
+++ b/WCSTrainer/Pages/Lessons/Create.cshtml
@@ -36,10 +36,11 @@
                         <input type="text" asp-for="Lesson.Duration" class="form-control" />
                      </div>
                   </div>
+
                   <div class="form-group">
                      <div class="form" id="imageUploadContainer">
                         <div class="labels">
-                           <label class="control-label">Description Section</label>
+                           <label class="control-label">Lesson Content</label>
                         </div>
                         <div class="image-upload-row">
                            <div class="description-row">
@@ -55,7 +56,7 @@
                   </div>
                   <div class="form-group">
                      <div class="btn-container">
-                        <button type="button" id="addImageUpload" class="btn bg-btn btnBlue">Add Another Section</button>
+                        <button type="button" id="addImageUpload" class="btn bg-btn btnBlue">Add Content Section</button>
                      </div>
                   </div>
 
