--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -33,14 +33,11 @@
                         <div class="form-group">
                            <div class="form">
                               <div class="labels">
-                                 <p class="control-label">Trainee</p>
                                  <span asp-validation-for="TrainingOrder.TraineeId" class="text-danger"></span>
                               </div>
                               <div class="selections">
+                                 <div class="btn btnWhite" onclick="openComponent('trainee')">Select Trainee</div>
                                  <ul id="traineeList" class="pill-container"></ul>
-                                 <div class="btn bg-btn btnWhite" onclick="openComponent('trainee')">
-                                    <p>Select Trainee</p>
-                                 </div>
                                  <input id="traineeInput" asp-for="TrainingOrder.TraineeId" hidden />
                               </div>
                            </div>
@@ -73,8 +70,6 @@
       </div>
    </div>
 </div>
-
-
 
 @section Scripts {
    @{
