--- a/WCSTrainer/Pages/Lessons/Details.cshtml
+++ b/WCSTrainer/Pages/Lessons/Details.cshtml
@@ -9,7 +9,7 @@
 
 @functions {
    public string ConvertContent(string content) {
-      var urlRegex = new Regex(@"(http|https)://[^\s]+|[a-zA-Z]:\\[^\s]+");
+      var urlRegex = new Regex(@"(http|https)://[^\s]+|[a-zA-Z]:/[^\s]+");
       return urlRegex.Replace(content, match => {
          var url = match.Value;
 
@@ -18,22 +18,24 @@
             if (videoId != null) {
                return $"<iframe class=\"description-video\" src=\"https://www.youtube.com/embed/{videoId}\" frameborder=\"0\" allowfullscreen></iframe>";
             }
-         }
-         else if (Regex.IsMatch(url, @"^H:\\")) {
-            var webPath = ConvertToWebPath(url, "H:/", "/Shared/");
+         } else if (Regex.IsMatch(url, @"^S:/")) {
+            var webPath = ConvertToWebPath(url, "S:");
             return $"<iframe src=\"{webPath}\" frameborder=\"0\" width=\"100%\" height=\"500\"></iframe>";
-         }
-         else if (Regex.IsMatch(url, @"^D:\\")) {
-            var webPath = ConvertToWebPath(url, "D:/", "/Shared/");
+         } else if (Regex.IsMatch(url, @"^D:/")) {
+            var webPath = ConvertToWebPath(url, "D:");
             var fileName = System.IO.Path.GetFileName(url);
             return $"<a class=\"btn btnBlue bg-btn\" href=\"{webPath}\" download>Download {fileName}</a>";
+         } else if (Regex.IsMatch(url, @"^I:/")) {
+            var webPath = ConvertToWebPath(url, "I:");
+            var fileName = System.IO.Path.GetFileName(url);
+            return $"<img src=\"{webPath}\" alt=\"[Could not load image.]\" />";
          }
          return $"<a class=\"description-link\" href=\"{url}\" target=\"_blank\">{url}</a>";
       });
    }
 
-   private string ConvertToWebPath(string filePath, string drivePrefix, string webPrefix) {
-      return filePath.Replace("\\", "/").Replace(drivePrefix, webPrefix);
+   private string ConvertToWebPath(string filePath, string drivePrefix) {
+      return filePath.Replace("\\", "/").Replace(drivePrefix, "");
    }
 
    private string ExtractYouTubeId(string url) {
@@ -42,7 +44,6 @@
       return match.Success ? match.Groups[1].Value : null;
    }
 }
-
 
 <div class="panel">
    <div class="body">
@@ -79,16 +80,10 @@
                         <tbody>
                            <tr>
                               <td class="column">
-                                 @if (Model.Lesson.Descriptions.Any()) {
-                                    @foreach (var description in Model.Lesson.Descriptions.Reverse()) {
-                                       if (description != null) {
-                                          @if (!string.IsNullOrWhiteSpace(description.TextContent)) {
-                                             <pre class="description-container">@Html.Raw(ConvertContent(description.TextContent))</pre>
-                                          }
-                                          @if (description.FileUpload != null) {
-                                             <img src="~/@description.FileUpload.FilePath" alt="[Could not load image.]" />
-                                          }
-                                       }
+                                 @{
+                                    if (!string.IsNullOrWhiteSpace(Model.Lesson.Content))
+                                    {
+                                       <pre class="description-container">@Html.Raw(ConvertContent(Model.Lesson.Content))</pre>
                                     }
                                  }
                               </td>
