--- a/WCSTrainer/Pages/Lessons/Edit.cshtml
+++ b/WCSTrainer/Pages/Lessons/Edit.cshtml
@@ -27,28 +27,15 @@
                         <select asp-for="Lesson.LessonCategoryId" class="form-drop2" asp-items="@Model.CategorySelectList"></select>
                      </div>
                   </div>
-@*                   <div class="form-group">
-                     <div class="form" id="imageUploadContainer">
+                  <div class="form-group">
+                     <div class="form">
                         <div class="labels">
-                           <label class="control-label">Description Section</label>
+                           <p class="control-label">Lesson Content</p>
+                           <span asp-validation-for="Lesson.Content" class="text-danger"></span>
                         </div>
-                        @foreach (var description in Model.Lesson.Descriptions) {
-                           <div class="image-upload-row">
-                              <div class="description-row">
-                                 <textarea class="desc-content" name="ImageCaptions" placeholder="Type lesson description here.">@description.TextContent</textarea>
-                              </div>
-                              <div class="description-row">
-                                 @if (description.FileUpload != null) {
-                                    <p>@description.FileUpload.FilePath</p>
-                                 }
-                                 <label class="control-label">Upload File</label>
-                                 <input type="file" name="ImageUploads" accept=".jpg,.jpeg,.png,.gif" class="form-control-file" />
-                                 <button type="button" class="btn remove-section-btn bg-btn btnRed">Remove Section</button>
-                              </div>
-                           </div>
-                        }
+                        <textarea asp-for="Lesson.Content" class="desc-content" placeholder="Type lesson description here."></textarea>
                      </div>
-                  </div> *@
+                  </div>
                   <div class="form-group">
                      <input type="submit" value="Save" class="btn bg-btn btnGreen" />
                   </div>
