--- a/WCSTrainer/Pages/FileExplorer/Index.cshtml
+++ b/WCSTrainer/Pages/FileExplorer/Index.cshtml
@@ -71,8 +71,8 @@
       <div class="properties">
          <div class="file-explorer">
             <div>
-               <ul id="path">
-                  <li>test</li>
+               <ul id="path" class="file-explorer-path">
+                  <li>Shared</li>
                </ul>
             </div>
             <div id="fileList" class="file-list">
