--- a/WCSTrainer/Pages/FileExplorer/Index.cshtml
+++ b/WCSTrainer/Pages/FileExplorer/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model WCSTrainer.Pages.FileManager.IndexModel
+@model WCSTrainer.Pages.FileExplorer.IndexModel
 
 @using System.Text.RegularExpressions
 @using System.IO
